Changes towards version 0.7:
- Fixed Ur-Quan story timestamps, from Vlad-Ceru Opran
- Removed the 256-frame limit on .ani files - Michael
- Renamed PlaySpeeh/StopSpeech to work around name collisions
  on OSX - Alex
- Ending the battle with a simultaneous death no longer triggers an
  assertion - SvdB
- Concurrent supermelee ship selection - SvdB
- New generic, unthreaded flashing code - SvdB
- Cleanup of 3DO ship spin support; spin speech works now - Alex
- No longer creating and mounting a temporary directory. It is no longer
  used, but it might be again at some point, for loadable modules. - SvdB
- Added RNG functions that work on a supplied state - SvdB
- Fixed a crash on startup if uqm.cfg did not exist, flagged and fixed 
  by jdorje - Michael
- Support for 3do "ship spin" videos (Bug #733, patch by Jan Lönnberg) 
  -Michael
- Major refactoring of input configuration to use the resource system 
  instead of custom files (bugs #961 and #949) - Michael
- Added ability to remove entries from ALists - Michael
- Cleaned up FRAME, CONTEXT, and FONT abstraction layers - Michael
- Added Input Frames to pause code to stop infinite loops - Michael
- Added more netplay debug code - SvdB
- Added uio_fprintf() and uio_vfprintf() - SvdB
- Any input will register for at least one frame (Bug #864) - Michael
- Many VControl cleanups - Michael
- Fix compilation without Netplay support - SvdB
- Added limited AIFF sound file decoder for playing 3DO originals;
  SDX2 decoder by SvdB - Alex
- Typo fix in Starbase speech (bug #959) - Michael
- (MacOS) Don't package up .svn dirs with 'build.sh uqm install' (bug #958),
  from Nic.
- No more extra newlines to log_add() calls for libs/network/ code - SvdB
- DUCK videos now play correctly after a video mode change; bug #734 - Alex
- Cancel key will now quit out of the Manifest Menu (Bug #838) - Michael
- Added -w and -x commandline options, to counter -f and -o; used these 