@@ -186,9 +186,9 @@
 #(OK_BUY_HISTORY_2) 8231,7101,7681,7691,7921,10165,8502,3906,7761,7691,5758,5508
 #(OK_BUY_HISTORY_3) 3244,7251,9213,9093,3946,7831,6940,9554,10204,8373,7280,7901,10495,7601,5849
 #(OK_BUY_HISTORY_4) 8302,6630,5017,10054,7100,9414,8052,11236,6870,7040,5568,7340
-#(OK_BUY_HISTORY_5) 6559,7952,7931,7220,8192,6059,10575,9394,8261,10886,7921,8372,11307,8262
-#(OK_BUY_HISTORY_6) 8832,6520,7691,8282,8212,6098,8553,8302,12748,8893,11126,6759,8212,7531,3545,9213,9154,3044,10345,10034,10225,10635,4346
-#(OK_BUY_HISTORY_7) 10165,7691,6489,7481,7461,6930,3004,7431,3184,8202,5628,8012,7290
+#(OK_BUY_HISTORY_5) 6559,7952,7931,7220,8192,6059,10575,9394,8261,11300,7921,8372,12300,7900
+#(OK_BUY_HISTORY_6) 8832,6520,7691,8282,8212,6098,8553,8302,12748,8893,11126,7500,8212,7000,3650,9500,9350,3000,10400,10200,10225,10635,4346
+#(OK_BUY_HISTORY_7) 10165,7691,6489,7481,7461,6930,3004,7431,3184,8602,5328,8212,7290
 #(OK_BUY_HISTORY_8) 4873,5128,8239,5847,8758,6508,7667,7140,9016,3009,8028,6667,8117,7888
 #(OK_BUY_HISTORY_9) 4843,6038,6249,3528,7917,6118,8499,5158,8487,5671,9355,4178,7678,5038,5909,8768,5638,10428
 #(INFO_ALL_GONE) 7841,9284,5127
