@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Fixed some Melnorme history info timestamps - Alex
 - Fixed Ur-Quan story timestamps, from Vlad-Ceru Opran
 - Removed the 256-frame limit on .ani files - Michael
 - Renamed PlaySpeeh/StopSpeech to work around name collisions
